# zc-os

./: .gitignore  CMakeLists.txt  MakeFile  bochsrc  main.c
kernel/boot/: boot.asm  head.asm  setup.asm
kernel/include/: stdarg.h  string.h
kernel/include/asm/: io.h  system.h
kernel/include/linux/: head.h  kernel.h  memory.h  sched.h  task.h  traps.h  tty.h  types.h
kernel/init/: main.c
kernel/kernel/: exception.c  gdt.c  idt.c  kernel.c  memory.c  printk.c  sched.c  task.c  traps.c  vsprintf.c
kernel/kernel/asm/: interrupt_handler.asm  kernel.asm  sched.asm
kernel/kernel/chr_drv/: clock.c  console.c  keyboard.c
kernel/lib/: string.c
kernel/mm/: malloc.c  mm_101012.c
tools/: common.h  fileinfo.c  fileinfo.h  floppy.c  floppy.h
